<resources>
    <string name="app_name">E-Commerce Task</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip_login">Skip Login</string>
    <string name="enter_valid_username">Enter Valid Username</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="add_to_cart">Add To cart</string>
    <string name="search">search</string>
    <string name="no_items_found">No Items Found</string>
    <string name="product_added_to_your_cart">Product Added to your cart</string>
    <string name="total_price">Total Price</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="proceed">Proceed</string>
    <string name="your_cart">Your Cart</string>
</resources>