<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreen.presentation.LoginActivity">


    <ImageView
        android:id="@+id/loginLogoIcon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:autofillHints="false"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:inputType="text"
        android:text="mor_2314"
        android:focusable="false"
        android:paddingHorizontal="@dimen/_4sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/loginLogoIcon" />

    <TextView
        android:id="@+id/loginUserNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/loginUserName"
        app:layout_constraintTop_toBottomOf="@id/loginUserName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:autofillHints="false"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:text="83r5^_"
        android:focusable="false"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_4sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/loginUserName" />

    <TextView
        android:id="@+id/loginPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/loginPassword"
        app:layout_constraintTop_toBottomOf="@id/loginPassword" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="@dimen/_40sdp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword" />

    <TextView
        android:id="@+id/loginSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/skip_login"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />


    <ProgressBar
        android:id="@+id/loginLoading"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>